--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ button:hover {
 
 .graphs-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: 1fr;
     gap: 2rem;
 }
 
